crdp-app-svc-ing.yml
#
# Combined Kubernetes file for deploying CRDP across a multi-node, multi-pod environment
#
# SECTION:  Pod Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: crdp
  name: crdp-deployment
spec:
  template:
     metadata:
        name: crdp
        labels:
          run: crdp
     spec:
      containers:
        - image: thalesciphertrust/ciphertrust-restful-data-protection:latest
          imagePullPolicy: IfNotPresent
          name: crdp-image
          ports:
            - containerPort: 8090
  replicas: 6
  selector:
      matchLabels:
        run: crdp

---
#
# SECTION:  Service Deployment
#
apiVersion: v1
kind: Service
metadata:
  labels:
    run: crdp
  name: crdp-service
spec:
  selector:
    run: crdp
  type: NodePort
  ports:
    - port: 8090
      nodePort: 32085

---
#
# SECTION:  NodePort-Only Access (No MetalLB)
# This section is used when MetalLB is NOT available in the cluster.
# Traffic reaches CRDP directly via the NodePort service defined above.
# No Ingress resource is needed since the NodePort service already exposes the application
# externally without requiring a LoadBalancer.
#
# To switch to the MetalLB/Ingress configuration, comment out this section and uncomment
# the "Ingress Deployment (MetalLB Required)" section above.
#
# Access the application at:
#   http://kube.test256.io:32085
#
